# fast-statistics

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build-wheels.sh  setup.py
examples/: .benchmarks.py.swp  benchmarks.py  benchmarks.sh
fast_stat/: __init__.py
fast_statistics/: __init__.py
src/: errors.rs  folders.rs  gen_macro.rs  lib.rs  macros.rs  stat_funcs.rs  utils.rs
src/helpers/: folders.rs  mod.rs
src/stat_funcs/: errors.rs  mod.rs  tests.rs
tests/: benchmarks.sh  tests.py
