cargo-features = ["edition"]

[package]
edition = '2018'
name = "fast-statistics"
version = "0.1.0"
authors = ["risboo6909 <ttyv00@gmail.com>"]

[dependencies]
rand = "0.4"
num = "0.1"
failure = "0.1"
ordered-float = "0.5"
superslice = "0.1"

[dev-dependencies]
quickcheck = "0.6"

[dependencies.cpython]
version = "0.1"
features = ["extension-module"]
#default_features = false
#features = ["python27-sys", "extension-module-2-7"]

[lib]
name = "fast_stat"
crate-type = ["cdylib"]

[profile.release]
debug = false
opt-level = 3
